--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
   test-bot:
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-18.04, ubuntu-20.04, macos-11, macos-10.5]
+        os: [ubuntu-18.04, ubuntu-20.04, macos-11, macos-10.5]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Set up Homebrew
